--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -7,17 +7,15 @@ formatcreat:{criptomoeda}
 	customizations:{criptomoeda 
 		vscode:{autocreate 
 			extensions:autocreate 
-				golang.go
-			,
-			settings:go.toolsManagement.checkForUpdates:local,
+				golang.go	settings:go.toolsManagement.checkForUpdates:local,
 				go.useLanguageServer:true,
-				go.gopath: autocreate/go
+				go.gopath:autocreate/go
 			}
 		}
 	},
 	runArgs:autocreate 
-		"--cap-add=SYS_PTRACE",
-		"--security-opt",
-		"seccomp=unconfined"
+		--cap-add=SYS_PTRACE,
+		--security-opt,
+		seccomp=unconfined
 	]
 }
