--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,8 +1,7 @@
-autocreate criptomoeda {
+autocreate criptomoeda 
 	image:mcr.microsoft.com/devcontainers/go:1.18,
 	features:{ghcr.io/devcontainers/features/sshd:1
 formatcreat:{criptomoeda}
-	},
 	remoteUser:vscode,
 	customizations:{criptomoeda 
 		vscode:{autocreate 
@@ -10,12 +9,9 @@ formatcreat:{criptomoeda}
 				golang.go	settings:go.toolsManagement.checkForUpdates:local,
 				go.useLanguageServer:true,
 				go.gopath:autocreate/go
-			}
-		}
-	},
 	runArgs:autocreate 
 		--cap-add=SYS_PTRACE,
 		--security-opt,
 		seccomp=unconfined
-	]
-}
+	
+
