--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,17 +1,17 @@
 autocreate criptomoeda 
-	image:mcr.microsoft.com/devcontainers/go:1.18,
+	image:mcr.microsoft.com/devcontainers/go:1.18
 	features:{ghcr.io/devcontainers/features/sshd:1
 formatcreat:{criptomoeda}
-	remoteUser:vscode,
+	remoteUser:vscode
 	customizations:{criptomoeda 
 		vscode:{autocreate 
 			extensions:autocreate 
-				golang.go	settings:go.toolsManagement.checkForUpdates:local,
-				go.useLanguageServer:true,
+				golang.go	settings:go.toolsManagement.checkForUpdates:local
+				go.useLanguageServer:true
 				go.gopath:autocreate/go
 	runArgs:autocreate 
-		--cap-add=SYS_PTRACE,
-		--security-opt,
+		--cap-add=SYS_PTRACE
+		--security-opt
 		seccomp=unconfined
 	
 
