--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,1 @@
-Criptomoeda.github/actions/autocreate Criptomoeda/lib/linguist-generated:Criptomoeda 
+Criptomoeda.github/actions/autocreate:Criptomoeda/lib/linguist-generated:Criptomoeda 
